k8s/server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: abbottqwq/multi-server
          resources:
            requests:
              memory: "200Mi"
              cpu: "300m"
            limits:
              memory: "500Mi"
              cpu: "700m"
          ports:
            - containerPort: 5000
